# TaskManager

./: .gitignore  CMakeLists.txt  README.md  main.cpp  task_manager
include/core/: FileTaskRepository.h
include/models/: Task.h
include/services/: TaskService.h
include/utils/: Printer.h
src/core/: FileTaskRepository.cpp
src/models/: Task.cpp
src/services/: TaskService.cpp
src/utils/: Printer.cpp
